ARM_GCC_493/Debug/BUILD.log
--------------- Build Started: 04/23/2017 14:59:56 Project: OVac, Configuration: ARM GCC 4.9-2015-q1-update Debug ---------------
cydsfit.exe -.appdatapath "C:\Users\jwgutter\AppData\Local\Cypress Semiconductor\PSoC Creator\4.0" -.fdsnotice -.fdswarpdepfile=warp_dependencies.txt -.fdselabdepfile=elab_dependencies.txt -.fdsbldfile=generated_files.txt -.fdsreffile=referenced_files.txt -p C:\Users\jwgutter\Documents\O-Vac\OVac.cydsn\OVac.cyprj -d CY8C5868LTI-LP039 -s C:\Users\jwgutter\Documents\O-Vac\OVac.cydsn\Generated_Source\PSoC5 -- -yv2 -q10 -ygs -o2 -v3 -.fftcfgtype=LE
Elaborating Design...
HDL Generation...
Synthesis...
Tech Mapping...
Analog Placement...
Info: apr.M0002: Analog signal "\ADC:Net_35\" is connected to one terminal only. (App=cydsfit)
Analog Routing...
Analog Code Generation...
Digital Placement...
Digital Routing...
Bitstream Generation...
Bitstream Verification...
Static timing analysis...
API Generation...
Dependency Generation...
Cleanup...
arm-none-eabi-gcc.exe -mcpu=cortex-m3 -mthumb -I.\emFile_V322c\Code\Include\PSoC5 -I.\emFile_V322c\Code\Include\PSoC5\emf32nOS -I. -IGenerated_Source\PSoC5 -Wa,-alh=.\ARM_GCC_493\Debug/main.lst -g -ffunction-sections -O0 -ffat-lto-objects -c main.c -o .\ARM_GCC_493\Debug\main.o
main.c:30:1: error: expected identifier or '(' before '<<' token
 <<<<<<< HEAD
 ^
In file included from c:\program files (x86)\cypress\psoc creator\4.0\psoc creator\import\gnu\arm\4.9.3\lib\gcc\arm-none-eabi\4.9.3\include\stdint.h:9:0,
                 from Generated_Source\PSoC5/cytypes.h:34,
                 from Generated_Source\PSoC5/cyfitter_cfg.h:20,
                 from Generated_Source\PSoC5/project.h:17,
                 from main.c:37:
c:\program files (x86)\cypress\psoc creator\4.0\psoc creator\import\gnu\arm\4.9.3\arm-none-eabi\include\stdint.h:20:9: error: unknown type name '__int8_t'
 typedef __int8_t int8_t ;
         ^
The command 'arm-none-eabi-gcc.exe' failed with exit code '1'.
--------------- Build Failed: 04/23/2017 15:00:07 ---------------
